--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
 <meta charset="UTF-8">
-<title>Penalty Career</title>
+<title>Penalty Career AI</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
@@ -20,20 +20,17 @@ body {
   justify-content: center;
   padding: 20px;
 }
-.screen.active {
-  display: flex;
-}
+.screen.active { display: flex; }
 
 .card {
   width: 100%;
   max-width: 420px;
-  background: rgba(15, 122, 46, 0.95);
+  background: rgba(15,122,46,.95);
   border-radius: 20px;
   padding: 18px;
-  box-shadow: 0 30px 60px rgba(0,0,0,0.45);
+  box-shadow: 0 30px 60px rgba(0,0,0,.45);
 }
 
-/* меню */
 .menu-title {
   text-align: center;
   font-size: 26px;
@@ -51,24 +48,11 @@ body {
   cursor: pointer;
   color: #fff;
 }
-.menu-btn.play {
-  background: linear-gradient(135deg, #00c6ff, #0088cc);
-}
-.menu-btn.career {
-  background: linear-gradient(135deg, #1ed760, #1db954);
-}
+.menu-btn.play { background: linear-gradient(135deg,#00c6ff,#0088cc); }
+.menu-btn.career { background: linear-gradient(135deg,#1ed760,#1db954); }
 
-/* игра */
-.title {
-  text-align: center;
-  font-weight: 800;
-  font-size: 22px;
-}
-.stats {
-  text-align: center;
-  font-size: 14px;
-  margin: 6px 0 10px;
-}
+.title { text-align:center;font-weight:800;font-size:22px; }
+.stats { text-align:center;font-size:14px;margin:6px 0 10px; }
 
 .stadium {
   position: relative;
@@ -77,118 +61,63 @@ body {
   background: linear-gradient(#c0c0c0 0%, #d9d9d9 35%, #1e8f3a 35%);
   border-radius: 14px;
   overflow: hidden;
-  margin-bottom: 10px;
   cursor: crosshair;
 }
 
 .goal {
-  position: absolute;
-  top: 42px;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 200px;
-  height: 78px;
-  border: 4px solid #fff;
-  border-bottom: none;
+  position:absolute;top:42px;left:50%;
+  transform:translateX(-50%);
+  width:200px;height:78px;
+  border:4px solid #fff;border-bottom:none;
 }
 
 .keeper {
-  position: absolute;
-  top: 70px;
-  left: 50%;
-  width: 24px;
-  height: 36px;
-  background: #ffd700;
-  border-radius: 6px;
-  transform: translateX(-50%);
-  transition: transform 0.4s ease;
+  position:absolute;top:70px;left:50%;
+  width:24px;height:36px;
+  background:#ffd700;border-radius:6px;
+  transform:translateX(-50%);
+  transition:transform .35s ease;
 }
 .keeper::before {
-  content: "";
-  position: absolute;
-  top: -14px;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 16px;
-  height: 16px;
-  background: #ffd700;
-  border-radius: 50%;
+  content:"";position:absolute;top:-14px;left:50%;
+  transform:translateX(-50%);
+  width:16px;height:16px;background:#ffd700;border-radius:50%;
 }
 
 .ball {
-  position: absolute;
-  bottom: 20px;
-  left: 50%;
-  width: 22px;
-  height: 22px;
-  background: #fff;
-  border: 3px solid #000;
-  border-radius: 50%;
-  transform: translateX(-50%);
-  transition: transform 0.5s ease;
+  position:absolute;bottom:20px;left:50%;
+  width:22px;height:22px;
+  background:#fff;border:3px solid #000;border-radius:50%;
+  transform:translateX(-50%);
+  transition:transform .5s ease;
 }
 
 .aim {
-  position: absolute;
-  width: 14px;
-  height: 14px;
-  border: 2px solid red;
-  border-radius: 50%;
-  pointer-events: none;
-  display: none;
+  position:absolute;width:14px;height:14px;
+  border:2px solid red;border-radius:50%;
+  pointer-events:none;display:none;
 }
 
-.power-bar {
-  height: 12px;
-  background: #333;
-  border-radius: 6px;
-  overflow: hidden;
-  margin-top: 10px;
-}
+.power-bar { height:12px;background:#333;border-radius:6px;overflow:hidden;margin-top:10px; }
 .power-fill {
-  height: 100%;
-  width: 0%;
-  background: linear-gradient(
-    90deg,
-    red 0%,
-    orange 40%,
-    lime 60%,
-    orange 80%,
-    red 100%
-  );
+  height:100%;width:0%;
+  background:linear-gradient(90deg,red,orange,lime,orange,red);
 }
 
-.result {
-  text-align: center;
-  font-weight: 700;
-  min-height: 22px;
-  margin-top: 6px;
-}
+.result { text-align:center;font-weight:700;min-height:22px;margin-top:6px; }
 
 .btn {
-  width: 100%;
-  margin-top: 8px;
-  padding: 14px;
-  font-size: 16px;
-  font-weight: 700;
-  border-radius: 12px;
-  border: none;
-  cursor: pointer;
-  display: none;
-  color: #fff;
+  width:100%;margin-top:8px;padding:14px;
+  font-size:16px;font-weight:700;border-radius:12px;
+  border:none;cursor:pointer;color:#fff;display:none;
 }
-.btn.next {
-  background: linear-gradient(135deg, #00c6ff, #0088cc);
-}
-.btn.restart {
-  background: linear-gradient(135deg, #1db954, #1ed760);
-}
+.btn.next { background:linear-gradient(135deg,#00c6ff,#0088cc); }
+.btn.restart { background:linear-gradient(135deg,#1db954,#1ed760); }
 </style>
 </head>
 
 <body>
 
-<!-- МЕНЮ -->
 <div class="screen active" id="menu">
   <div class="card">
     <div class="menu-title">PENALTY GAME</div>
@@ -197,10 +126,8 @@ body {
   </div>
 </div>
 
-<!-- ИГРА -->
 <div class="screen" id="game">
   <div class="card">
-
     <div class="title" id="modeTitle"></div>
     <div class="stats" id="stats"></div>
 
@@ -212,18 +139,18 @@ body {
     </div>
 
     <div class="power-bar"><div class="power-fill" id="powerFill"></div></div>
-
-    <div class="result" id="result"></div>
+    <div class="result" id="result">Наведи, зажми и бей</div>
 
     <button class="btn next" id="nextBtn">➡️ Следующий удар</button>
     <button class="btn restart" id="restartBtn">🔁 Новая серия</button>
-
   </div>
 </div>
 
 <script>
 let shots, goals, rating, career;
 const maxShots = 5;
+
+let shotMemory = { LT:0, LB:0, C:0, RT:0, RB:0 };
 
 const menu = document.getElementById('menu');
 const game = document.getElementById('game');
@@ -240,120 +167,105 @@ const restartBtn = document.getElementById('restartBtn');
 
 let power = 0, charging = false, interval, canShoot = true;
 
-/* старт игры */
-function startGame(isCareer) {
+function startGame(isCareer){
   career = isCareer;
-  shots = 0;
-  goals = 0;
+  shots = 0; goals = 0;
+  shotMemory = { LT:0, LB:0, C:0, RT:0, RB:0 };
 
-  if (career) {
-    rating = Number(localStorage.getItem('rating')) || 60;
-    modeTitle.innerText = 'Карьера';
-  } else {
-    rating = 60;
-    modeTitle.innerText = 'Новая игра';
-  }
-
+  rating = career ? Number(localStorage.getItem('rating'))||60 : 60;
+  modeTitle.innerText = career ? 'Карьера' : 'Новая игра';
   updateStats();
   menu.classList.remove('active');
   game.classList.add('active');
 }
 
-/* прицел */
-stadium.addEventListener('mousemove', e => {
-  if (!canShoot) return;
-  const r = stadium.getBoundingClientRect();
-  aim.style.left = e.clientX - r.left - 7 + 'px';
-  aim.style.top = e.clientY - r.top - 7 + 'px';
-  aim.style.display = 'block';
+stadium.addEventListener('mousemove',e=>{
+  if(!canShoot) return;
+  const r=stadium.getBoundingClientRect();
+  aim.style.left=e.clientX-r.left-7+'px';
+  aim.style.top=e.clientY-r.top-7+'px';
+  aim.style.display='block';
 });
 
-/* зарядка */
-stadium.addEventListener('mousedown', () => {
-  if (!canShoot) return;
-  charging = true;
-  power = 0;
-  powerFill.style.width = '0%';
-
-  interval = setInterval(() => {
-    power = Math.min(power + 2, 100);
-    powerFill.style.width = power + '%';
-  }, 30);
+stadium.addEventListener('mousedown',()=>{
+  if(!canShoot) return;
+  charging=true;power=0;powerFill.style.width='0%';
+  interval=setInterval(()=>{
+    power=Math.min(power+2,100);
+    powerFill.style.width=power+'%';
+  },30);
 });
 
-/* удар */
-stadium.addEventListener('mouseup', e => {
-  if (!charging || !canShoot) return;
-  clearInterval(interval);
-  charging = false;
-  canShoot = false;
-  shots++;
+stadium.addEventListener('mouseup',e=>{
+  if(!charging||!canShoot) return;
+  clearInterval(interval);charging=false;canShoot=false;shots++;
 
-  const perfect = power >= 55 && power <= 65;
-  const saveChance = perfect ? 0.25 : 0.45;
+  const r=stadium.getBoundingClientRect();
+  const x=e.clientX-r.left, y=e.clientY-r.top;
 
-  const r = stadium.getBoundingClientRect();
-  const x = e.clientX - r.left;
-  const y = e.clientY - r.top;
+  const zone =
+    y<90 ? (x<r.width/2?'LT':'RT') :
+    y<120 ? 'C' :
+    (x<r.width/2?'LB':'RB');
+
+  shotMemory[zone]++;
+
+  const mostUsed = Object.keys(shotMemory)
+    .reduce((a,b)=>shotMemory[a]>shotMemory[b]?a:b);
+
+  const intelligence = Math.min(0.15 + rating/200, 0.6);
+  const reacts = Math.random() < intelligence;
 
   ball.style.transform =
-    `translateX(calc(-50% + ${x - r.width/2}px))
-     translateY(${y - (r.height - 20)}px)`;
+    `translateX(calc(-50% + ${x-r.width/2}px))
+     translateY(${y-(r.height-20)}px)`;
 
-  if (Math.random() < saveChance) {
-    keeper.style.transform =
-      `translateX(calc(-50% + ${x - r.width/2}px))`;
+  if(reacts && Math.random()<0.7){
+    const dir = mostUsed[0]==='L'?-60:mostUsed[0]==='R'?60:0;
+    keeper.style.transform=`translateX(calc(-50% + ${dir}px))`;
   }
 
-  setTimeout(() => {
-    if (Math.random() < saveChance) {
-      result.innerText = '❌ СЕЙВ';
+  setTimeout(()=>{
+    if(reacts && Math.random()<0.5){
+      result.innerText='❌ СЕЙВ';
     } else {
       goals++;
-      if (career && rating < 99) rating += perfect ? 2 : 1;
-      result.innerText = perfect ? '🔥 ИДЕАЛЬНЫЙ ГОЛ' : '⚽ ГОЛ';
+      if(career && rating<99) rating++;
+      result.innerText='⚽ ГОЛ';
     }
     updateStats();
     showControls();
-  }, 600);
+  },600);
 });
 
-function updateStats() {
-  stats.innerText =
-    `Удары: ${shots}/5 · Голы: ${goals} · Рейтинг: ${rating}`;
+function updateStats(){
+  stats.innerText=`Удары: ${shots}/5 · Голы: ${goals} · Рейтинг: ${rating}`;
 }
 
-function showControls() {
-  aim.style.display = 'none';
-  powerFill.style.width = '0%';
-
-  if (shots < maxShots) {
-    nextBtn.style.display = 'block';
-  } else {
-    if (career) localStorage.setItem('rating', rating);
-    result.innerText = `🏁 Серия окончена: ${goals} из 5`;
-    restartBtn.style.display = 'block';
+function showControls(){
+  aim.style.display='none';powerFill.style.width='0%';
+  if(shots<maxShots) nextBtn.style.display='block';
+  else{
+    if(career) localStorage.setItem('rating',rating);
+    result.innerText=`🏁 Серия окончена: ${goals} из 5`;
+    restartBtn.style.display='block';
   }
 }
 
-nextBtn.onclick = () => {
-  resetShot();
-  nextBtn.style.display = 'none';
+nextBtn.onclick=()=>{
+  resetShot();nextBtn.style.display='none';
+};
+restartBtn.onclick=()=>{
+  shots=0;goals=0;
+  shotMemory={ LT:0, LB:0, C:0, RT:0, RB:0 };
+  updateStats();resetShot();restartBtn.style.display='none';
 };
 
-restartBtn.onclick = () => {
-  shots = 0;
-  goals = 0;
-  updateStats();
-  resetShot();
-  restartBtn.style.display = 'none';
-};
-
-function resetShot() {
-  ball.style.transform = 'translateX(-50%)';
-  keeper.style.transform = 'translateX(-50%)';
-  result.innerText = 'Наведи и бей';
-  canShoot = true;
+function resetShot(){
+  ball.style.transform='translateX(-50%)';
+  keeper.style.transform='translateX(-50%)';
+  result.innerText='Наведи, зажми и бей';
+  canShoot=true;
 }
 </script>
 </body>
