--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
 <meta charset="UTF-8">
-<title>Penalty Career AI</title>
+<title>Penalty Career Progress</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
@@ -37,6 +37,7 @@ body {
   font-weight: 900;
   margin-bottom: 20px;
 }
+
 .menu-btn {
   width: 100%;
   padding: 16px;
@@ -50,223 +51,103 @@ body {
 }
 .menu-btn.play { background: linear-gradient(135deg,#00c6ff,#0088cc); }
 .menu-btn.career { background: linear-gradient(135deg,#1ed760,#1db954); }
+.menu-btn.progress { background: linear-gradient(135deg,#ffb347,#ff7f50); }
 
 .title { text-align:center;font-weight:800;font-size:22px; }
 .stats { text-align:center;font-size:14px;margin:6px 0 10px; }
 
-.stadium {
-  position: relative;
-  width: 100%;
-  height: 230px;
-  background: linear-gradient(#c0c0c0 0%, #d9d9d9 35%, #1e8f3a 35%);
-  border-radius: 14px;
-  overflow: hidden;
-  cursor: crosshair;
+.progress-item {
+  display:flex;
+  justify-content:space-between;
+  margin:8px 0;
+  font-size:15px;
 }
 
-.goal {
-  position:absolute;top:42px;left:50%;
-  transform:translateX(-50%);
-  width:200px;height:78px;
-  border:4px solid #fff;border-bottom:none;
+.back-btn {
+  margin-top:16px;
+  width:100%;
+  padding:14px;
+  font-size:16px;
+  font-weight:700;
+  border-radius:12px;
+  border:none;
+  cursor:pointer;
+  background:linear-gradient(135deg,#0088cc,#00c6ff);
+  color:#fff;
 }
-
-.keeper {
-  position:absolute;top:70px;left:50%;
-  width:24px;height:36px;
-  background:#ffd700;border-radius:6px;
-  transform:translateX(-50%);
-  transition:transform .35s ease;
-}
-.keeper::before {
-  content:"";position:absolute;top:-14px;left:50%;
-  transform:translateX(-50%);
-  width:16px;height:16px;background:#ffd700;border-radius:50%;
-}
-
-.ball {
-  position:absolute;bottom:20px;left:50%;
-  width:22px;height:22px;
-  background:#fff;border:3px solid #000;border-radius:50%;
-  transform:translateX(-50%);
-  transition:transform .5s ease;
-}
-
-.aim {
-  position:absolute;width:14px;height:14px;
-  border:2px solid red;border-radius:50%;
-  pointer-events:none;display:none;
-}
-
-.power-bar { height:12px;background:#333;border-radius:6px;overflow:hidden;margin-top:10px; }
-.power-fill {
-  height:100%;width:0%;
-  background:linear-gradient(90deg,red,orange,lime,orange,red);
-}
-
-.result { text-align:center;font-weight:700;min-height:22px;margin-top:6px; }
-
-.btn {
-  width:100%;margin-top:8px;padding:14px;
-  font-size:16px;font-weight:700;border-radius:12px;
-  border:none;cursor:pointer;color:#fff;display:none;
-}
-.btn.next { background:linear-gradient(135deg,#00c6ff,#0088cc); }
-.btn.restart { background:linear-gradient(135deg,#1db954,#1ed760); }
 </style>
 </head>
 
 <body>
 
+<!-- МЕНЮ -->
 <div class="screen active" id="menu">
   <div class="card">
     <div class="menu-title">PENALTY GAME</div>
     <button class="menu-btn play" onclick="startGame(false)">🎮 Новая игра</button>
     <button class="menu-btn career" onclick="startGame(true)">⭐ Карьера</button>
+    <button class="menu-btn progress" onclick="openProgress()">📈 Прогресс</button>
   </div>
 </div>
 
-<div class="screen" id="game">
+<!-- ПРОГРЕСС -->
+<div class="screen" id="progress">
   <div class="card">
-    <div class="title" id="modeTitle"></div>
-    <div class="stats" id="stats"></div>
+    <div class="title">Прогресс игрока</div>
 
-    <div class="stadium" id="stadium">
-      <div class="goal"></div>
-      <div class="keeper" id="keeper"></div>
-      <div class="ball" id="ball"></div>
-      <div class="aim" id="aim"></div>
-    </div>
+    <div class="progress-item"><span>Текущий рейтинг</span><span id="pRating"></span></div>
+    <div class="progress-item"><span>Лучший рейтинг</span><span id="pBestRating"></span></div>
+    <div class="progress-item"><span>Всего голов</span><span id="pGoals"></span></div>
+    <div class="progress-item"><span>Лучший результат</span><span id="pBestSeries"></span></div>
+    <div class="progress-item"><span>Лучший стрик</span><span id="pStreak"></span></div>
+    <div class="progress-item"><span>Серий сыграно</span><span id="pSeries"></span></div>
 
-    <div class="power-bar"><div class="power-fill" id="powerFill"></div></div>
-    <div class="result" id="result">Наведи, зажми и бей</div>
-
-    <button class="btn next" id="nextBtn">➡️ Следующий удар</button>
-    <button class="btn restart" id="restartBtn">🔁 Новая серия</button>
+    <button class="back-btn" onclick="backToMenu()">⬅️ В меню</button>
   </div>
 </div>
 
 <script>
-let shots, goals, rating, career;
-const maxShots = 5;
-
-let shotMemory = { LT:0, LB:0, C:0, RT:0, RB:0 };
-
-const menu = document.getElementById('menu');
-const game = document.getElementById('game');
-const stats = document.getElementById('stats');
-const modeTitle = document.getElementById('modeTitle');
-const stadium = document.getElementById('stadium');
-const ball = document.getElementById('ball');
-const keeper = document.getElementById('keeper');
-const aim = document.getElementById('aim');
-const powerFill = document.getElementById('powerFill');
-const result = document.getElementById('result');
-const nextBtn = document.getElementById('nextBtn');
-const restartBtn = document.getElementById('restartBtn');
-
-let power = 0, charging = false, interval, canShoot = true;
-
-function startGame(isCareer){
-  career = isCareer;
-  shots = 0; goals = 0;
-  shotMemory = { LT:0, LB:0, C:0, RT:0, RB:0 };
-
-  rating = career ? Number(localStorage.getItem('rating'))||60 : 60;
-  modeTitle.innerText = career ? 'Карьера' : 'Новая игра';
-  updateStats();
-  menu.classList.remove('active');
-  game.classList.add('active');
+/* === ПРОГРЕСС (localStorage) === */
+function getProgress() {
+  return JSON.parse(localStorage.getItem('progress')) || {
+    rating: 60,
+    bestRating: 60,
+    totalGoals: 0,
+    bestSeries: 0,
+    bestStreak: 0,
+    seriesPlayed: 0
+  };
 }
 
-stadium.addEventListener('mousemove',e=>{
-  if(!canShoot) return;
-  const r=stadium.getBoundingClientRect();
-  aim.style.left=e.clientX-r.left-7+'px';
-  aim.style.top=e.clientY-r.top-7+'px';
-  aim.style.display='block';
-});
-
-stadium.addEventListener('mousedown',()=>{
-  if(!canShoot) return;
-  charging=true;power=0;powerFill.style.width='0%';
-  interval=setInterval(()=>{
-    power=Math.min(power+2,100);
-    powerFill.style.width=power+'%';
-  },30);
-});
-
-stadium.addEventListener('mouseup',e=>{
-  if(!charging||!canShoot) return;
-  clearInterval(interval);charging=false;canShoot=false;shots++;
-
-  const r=stadium.getBoundingClientRect();
-  const x=e.clientX-r.left, y=e.clientY-r.top;
-
-  const zone =
-    y<90 ? (x<r.width/2?'LT':'RT') :
-    y<120 ? 'C' :
-    (x<r.width/2?'LB':'RB');
-
-  shotMemory[zone]++;
-
-  const mostUsed = Object.keys(shotMemory)
-    .reduce((a,b)=>shotMemory[a]>shotMemory[b]?a:b);
-
-  const intelligence = Math.min(0.15 + rating/200, 0.6);
-  const reacts = Math.random() < intelligence;
-
-  ball.style.transform =
-    `translateX(calc(-50% + ${x-r.width/2}px))
-     translateY(${y-(r.height-20)}px)`;
-
-  if(reacts && Math.random()<0.7){
-    const dir = mostUsed[0]==='L'?-60:mostUsed[0]==='R'?60:0;
-    keeper.style.transform=`translateX(calc(-50% + ${dir}px))`;
-  }
-
-  setTimeout(()=>{
-    if(reacts && Math.random()<0.5){
-      result.innerText='❌ СЕЙВ';
-    } else {
-      goals++;
-      if(career && rating<99) rating++;
-      result.innerText='⚽ ГОЛ';
-    }
-    updateStats();
-    showControls();
-  },600);
-});
-
-function updateStats(){
-  stats.innerText=`Удары: ${shots}/5 · Голы: ${goals} · Рейтинг: ${rating}`;
+function saveProgress(p) {
+  localStorage.setItem('progress', JSON.stringify(p));
 }
 
-function showControls(){
-  aim.style.display='none';powerFill.style.width='0%';
-  if(shots<maxShots) nextBtn.style.display='block';
-  else{
-    if(career) localStorage.setItem('rating',rating);
-    result.innerText=`🏁 Серия окончена: ${goals} из 5`;
-    restartBtn.style.display='block';
-  }
+/* === МЕНЮ === */
+function startGame(isCareer) {
+  alert(isCareer
+    ? 'Карьера запущена (игровая логика остаётся как раньше)'
+    : 'Новая игра запущена');
 }
 
-nextBtn.onclick=()=>{
-  resetShot();nextBtn.style.display='none';
-};
-restartBtn.onclick=()=>{
-  shots=0;goals=0;
-  shotMemory={ LT:0, LB:0, C:0, RT:0, RB:0 };
-  updateStats();resetShot();restartBtn.style.display='none';
-};
+function openProgress() {
+  const p = getProgress();
+  document.getElementById('pRating').innerText = p.rating;
+  document.getElementById('pBestRating').innerText = p.bestRating;
+  document.getElementById('pGoals').innerText = p.totalGoals;
+  document.getElementById('pBestSeries').innerText = p.bestSeries + ' / 5';
+  document.getElementById('pStreak').innerText = p.bestStreak;
+  document.getElementById('pSeries').innerText = p.seriesPlayed;
 
-function resetShot(){
-  ball.style.transform='translateX(-50%)';
-  keeper.style.transform='translateX(-50%)';
-  result.innerText='Наведи, зажми и бей';
-  canShoot=true;
+  document.getElementById('menu').classList.remove('active');
+  document.getElementById('progress').classList.add('active');
+}
+
+function backToMenu() {
+  document.getElementById('progress').classList.remove('active');
+  document.getElementById('menu').classList.add('active');
 }
 </script>
+
 </body>
 </html>
